homepage spacing and font

--- a/src/app/nile-web/home/home/home.component.html
+++ b/src/app/nile-web/home/home/home.component.html
@@ -8,36 +8,30 @@
 
       <div class="col-sm-10 col-md-6 text-center">
         <h1 class="display-3">Nile Delivery</h1>
-        <h2 class="lead">Run Smoother</h2>
-        <hr class="my-4">
+        <h2 class="lead">Run Smoother</h2> 
 
         <div class="row">
           <div class="col-12">
-            <h5 id="jumbo">
+            <h5 id="tagline">
               The innovative new delivery service specifically designed for<br>
               <span class="font-weight-bold">Construction, Trade &amp; Commercial Businesses</span>
             </h5>
           </div>
         </div>
-
+<br><br><br>
         <div class="row justify-content-center">
           <div class="col-3">
             <img src="/assets/images/welder1.png" class="img-fluid" alt="Trades">
-            <p>Specialty <br> Trades</p>
           </div>
 
           <div class="col-3">
             <img src="/assets/images/boss1.png" class="img-fluid" alt="Owners">
-            <p>Business Owners</p>
           </div>
 
           <div class="col-3">
             <img src="/assets/images/engineer1.png" class="img-fluid" alt="Managers">
-            <p>Project Managers</p>
           </div>
         </div>
-
-
 
 
       </div>
@@ -69,7 +63,7 @@
       <span class="font-weight-bold">Increase Opportunity.</span>
     </h3>
   </div>
-  <br>
+  <br><br><br>
   
   <div class="row justify-content-center">
     <div class="col-sm-10">
@@ -89,7 +83,7 @@
             <h4 class="card-footer">Invoicing</h4>
           </div>
         </div>
-        <br>      
+        <br><br>      
 
         <div class="text-center">
           <p>
@@ -113,7 +107,7 @@
 <div class="container-fluid" id="video">
   <div class="row justify-content-center">
     <div class="col-sm-10 col-md-8 col-lg-10">
-      
+      <br>
       <div class="text-center">
         <h1>Help your business Run Smoother</h1>
       </div>
@@ -125,8 +119,9 @@
               <iframe src="https://www.youtube.com/embed/FTIhw3iFcao" allowfullscreen></iframe>
             </div>
           </div>
-          <p>Unanticipated supply shortfalls or adjustments to project plans that require you to quickly source additional or alternate materials while you’re on the job, can cost time, impede progress, eroding your profitability. Nile Delivery is the solution.</p>
+          <p class="video">Unanticipated supply shortfalls or adjustments to project plans that require you to quickly source additional or alternate materials while you’re on the job, can cost time, impede progress, eroding your profitability. Nile Delivery is the solution.</p>
         </div>
+        <br>
       </div>
 
     </div>
@@ -141,6 +136,7 @@
   <!-- Industries Section -->
 <div class="container" id="industries">
   <div class="text-center">
+    <br><br>
     <h1>The Preferred Delivery Solution for:</h1>
     <h2>Construction &amp; Trade Contractors</h2>
     <br>
@@ -171,6 +167,7 @@
     </div>
   <br>
   <br>
+  <br>
 </div>
 
 
@@ -190,6 +187,7 @@
       </div>
     </div> -->
   </div>
+  <br><br>
   <div class="spacer"></div>
   <div class="row">
       <div class="col-sm-4"></div>
@@ -215,6 +213,7 @@
 <br>
 
 <!-- Endliner -->
+<br><br>
 <div class="text-center">
   <h3>Get what you need faster</h3>
   <p>
@@ -223,7 +222,7 @@
   </p>
   <a href="/services"><button type="button" class="btn btn-primary">Learn More</button></a>
 </div>
-<br>
+<br><br><br>
 <hr>
 
 
