--- a/src/app/nile-web/home/home/home.component.css
+++ b/src/app/nile-web/home/home/home.component.css
@@ -20,6 +20,19 @@ h3 {
   background-size: cover;
 }
 
+.display-3 {
+  color: black;
+}
+
+.lead {
+  color: #bc2505;
+}
+
+#tagline {
+  color: black;
+}
+
+
 #phoneform {
   float: right;
   /* border-style: solid;
@@ -40,6 +53,7 @@ h3 {
   border-radius: 10px;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
+
 
 #3clients {
   float: left;
@@ -63,6 +77,9 @@ h3 {
     padding: 20px;
   }
 
+.video {
+    text-align: center;
+  }
 /* #feature3 .img-fluid {
   size: 100%;
 } */
