page spacing, 2.0 start

--- a/src/app/nile-web/about/about/about.component.html
+++ b/src/app/nile-web/about/about/about.component.html
@@ -7,7 +7,7 @@
 	</div>
 </div>
 <hr>
-<br>
+<br><br><br>
 
 <!-- Nile Difference Section -->
 <div class="container-fluid">
@@ -20,8 +20,7 @@
 		</div>
 	</div>
 </div>
-<br>
-<br>
+<br><br><br><br>
 
 <!-- Nile Story Section -->
 <div class="container-fluid">
@@ -38,7 +37,7 @@
 </div> <!--ends text-center -->
 
 <!-- Nile Team Section -->
-<div class="container-fluid">
+<!-- <div class="container-fluid">
 	<div class="row justify-content-center">
 			<div class="text-center">
 			<h2>
@@ -58,9 +57,9 @@
 							<div class="container">
 								<p>Co-Founder & CEO</p>
 							</div>
-							<!-- <footer>
+							<footer>
 								<h5>Founder & CEO</h5>
-							</footer> -->
+							</footer>
 						</div>
 					</div>
 					<div class="col-sm-1 col-md-1" id="prof-pic">
@@ -74,15 +73,15 @@
 							<div class="container">
 								<p>Co-Founder & CTO</p>
 							</div>
-							<!-- <footer>
+							<footer>
 								<h5>Co-Founder & CTO</h5>
-							</footer> -->
+							</footer>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 <br>
 <br>
 
@@ -104,6 +103,6 @@
 	</div>
 </div>
 </div>
-<br>
+<br><br><br>
 <hr>
 
