--- a/src/app/nile-web/home/home/home.component.html
+++ b/src/app/nile-web/home/home/home.component.html
@@ -165,9 +165,7 @@
         We outpace and outperform traditional runners because we’re equipped to handle heavy, bulky and oversized orders that traditional couriers just cannot manage.  
         We deliver to any business, project site, or other location you request. And we get it there promptly, with an efficiency that helps your business Run Smoother.</p>
     </div>
-  <br>
-  <br>
-  <br>
+    <br><br><br><br>
 </div>
 
 
@@ -187,10 +185,10 @@
       </div>
     </div> -->
   </div>
-  <br><br>
+  
   <div class="spacer"></div>
   <div class="row">
-      <div class="col-sm-4"></div>
+      <div class="col-sm-3"></div>
     <div class="col-sm-5">
         <div class="card" id="advantagelist"> 
           <div class="card-header">
@@ -199,8 +197,8 @@
         <div class="card-body">
           <ul>
             <li>Conserve manpower without sacrificing service</li>
-            <li>Order tracking to accurately predict delivery timelines</li>
-            <li>Invoice Nile as a ‘cost of service’ not an overhead expense</li>
+            <li>Order tracking to accurately predict delivery times</li>
+            <li>Invoice as ‘cost of service’ not an overhead expense</li>
             <li>You only pay for the time you actively need service</li>
             <li>The more you use Nile, the more you save </li>
           </ul>
