--- a/src/app/apply-client/apply-client/apply-client.component.html
+++ b/src/app/apply-client/apply-client/apply-client.component.html
@@ -87,8 +87,6 @@
 						<select formControlName="state" class="form-control" id="selectState" placeholder="">
 							<option>Texas</option>
 							<option>other state</option>
-							<option>more states</option>
-							<option>yeah</option>
 						</select>
 					</div>
 
@@ -119,13 +117,13 @@
 						</label>
 					</div>
 					<div class="container-fluid">
-							<div class="row justify-content-center">
-					<button (click)="onFormSubmit()" class="btn btn-primary">Submit</button>
-				</div></div>
+						<div class="row justify-content-center">
+							<button (click)="onFormSubmit()" class="btn btn-primary">Submit</button>
+						</div>
+					</div>
 				<br>
-				</form>
+			</form>
 
 		</div>
 	</div>
-
 </div>
