--- a/src/app/nile-web/contact/contact/contact.component.html
+++ b/src/app/nile-web/contact/contact/contact.component.html
@@ -32,23 +32,25 @@
 <div class="container-fluid" id="contact-form">
   <div class="row justify-content-center">
     <div class="col-sm-7 col-md-7">
-      <form>
+
+      <form [FormGroup]="form"> 
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Name">
+            <input type="text" formControlName="name" class="form-control" id="name" placeholder="Name">
         </div>
         <div class="form-group">
-          <input type="email" class="form-control" id="email1" placeholder="Email">
+          <input type="email" formControlName="email" class="form-control" id="email" placeholder="Email">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Subject">
+          <input type="text" formControlName="subject" class="form-control" id="subject" placeholder="Subject">
         </div>
         <div class="form-group">
-          <textarea class="form-control" id="message" rows="7" placeholder="Enter your message here..."></textarea>
+          <textarea formControlName="message" class="form-control" id="message" rows="7" placeholder="Enter your message here..."></textarea>
         </div>
         <div class="text-center">
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button (click)="onFormSubmit()" class="btn btn-primary">Submit</button>
         </div>
       </form>
+
     </div>
   </div>
 </div>
